--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,80 @@ body{
      font-family: 'Lato', sans-serif; 
      max-width: 1200px;
      background-color: #143640;
+     padding-bottom: 20px;
 }
 
-.img_container{
-	position: relative; 
-	left: 0; 
-	top: 0;
-	max-height:500px;
-	max-width:1200px;
-}
-.background{
-	position: relative; 
-	top: 0; 
-	left: 0;
-	width:100%;
-	z-index: 0;
+header{
+	background-color: #ED4D4E;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	color: #dcddcd;
 }
 
 .profile{
-	position: relative; 
-	z-index: 1;
-	max-width: 100px;
-	margin: 0 auto;
+	max-width: 250px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 	border-radius: 50px;
 }
+
+header h1{
+	padding-top: 20px;
+	text-align: center;
+	font-size: 22px;
+}
+
+main{
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 70%;
+	border: 1px solid #dcddcd;
+	border-radius: 5px;
+	padding: 10px;
+}
+
+main article{
+	color: #dcddcd;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+article h2{
+	text-align: center;
+	font-size: 18px;
+	font-weight: bold;
+	text-decoration: underline;
+	padding-bottom: 10px;
+}
+
+article hr{
+	width: 25%;
+	margin-left:auto;
+	margin-right: auto;	
+}
+
+.hr1{
+	margin-top: 15px; 
+	margin-bottom: 15px;
+}
+
+.hr2{
+	margin-bottom: 15px;
+}
+
+article p{
+}
+
+article ol li{
+	padding-bottom: 15px;
+}
+
+.listHead{
+	font-weight:bold;
+}
+
+
 
 
