--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
      font-family: 'Lato', sans-serif; 
-     max-width: 1200px;
+     max-width: 100%;
      background-color: #143640;
      padding-bottom: 20px;
 }
@@ -59,6 +59,7 @@ main{
 	margin-left: auto;
 	margin-right: auto;
 	width: 70%;
+	max-width: 800px;
 	border: 1px solid #dcddcd;
 	border-radius: 5px;
 	padding-bottom: 20px;
