--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,21 @@
 body{
      font-family: 'Lato', sans-serif; 
-     max-width: 1200px;
      background-color: #143640;
      padding-bottom: 20px;
 }
 
-header{
-	background-color: #ED4D4E;
-	padding-top: 20px;
-	color: #dcddcd;
-}
 
-.profile{
-	max-width: 250px;
+header img{
 	margin-left: auto;
 	margin-right: auto;
-	display: block;
-	border-radius: 50px;
+	width:100%;
 }
 
-header h1{
-	margin-top: 20px;
-	text-align: center;
-	font-size: 24px;
-	/*margin-left: auto;
-	margin-right: auto;
-	display: block;
-	border: 2px solid #dcddcd;
-	border-radius: 5px;
-	max-width: 250px; */
-}
 
 header nav{
-	margin-top: 10px;
+	padding-top: 10px;
 	text-align: center;
+	background-color: #ED4D4E;
 }
 
 a{
@@ -49,12 +31,13 @@ a{
 header nav a{
 	color: #ED4D4E;
 	background-color: #dcddcd;
-	margin-bottom: 10px;
+	padding-bottom: 10px;
 }
 
 
 
 main{
+	max-width: 1200px;
 	margin-top: 20px;
 	margin-left: auto;
 	margin-right: auto;
@@ -62,8 +45,9 @@ main{
 	border: 1px solid #dcddcd;
 	border-radius: 5px;
 	padding-bottom: 20px;
-	
 }
+
+
 
 main article{
 	color: #dcddcd;
