--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ header img{
 	margin-left: auto;
 	margin-right: auto;
 	width:100%;
+	margin-bottom: -2px;
 }
 
 
@@ -23,10 +24,10 @@ a{
 	text-decoration: none;
 	display: inline-block;
 	padding: 10px;
-	font-weight: bold;
-	border-radius: 10px;
 	border: solid 1px #143640;
-	font-size: 12px;
+	font-size: 14px;
+	letter-spacing: .5px;
+	font-size: 16px;
 }
 
 header nav a{
@@ -43,7 +44,6 @@ main{
 	margin-left: auto;
 	margin-right: auto;
 	width: 70%;
-	max-width: 800px;
 	border: 1px solid #dcddcd;
 	border-radius: 5px;
 	padding-bottom: 20px;
@@ -101,6 +101,7 @@ article a{
 	width: 100px;
 	margin-left: auto;
 	margin-right: auto;
+	letter-spacing: 1px;
 
 }
 
