--- a/css/form.css
+++ b/css/form.css
@@ -18,8 +18,7 @@ header{
 
 main{
 	margin-top: 20px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 	width: 70%;
 	min-width: 380px;
 	border: 1px solid #dcddcd;
