--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-     font-family: "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+     font-family: 'Raleway', sans-serif;
      background-color: white;
 }
 
@@ -25,7 +25,7 @@ a{
 	font-size: 14px;
 	letter-spacing: .5px;
 	font-size: 16px;
-	font-family: "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+	font-family: 'Raleway', sans-serif;
 	color: #333332;
 	text-decoration: underline;
 }
@@ -50,7 +50,7 @@ main{
 article{
 	color: #333332;
 	padding: 0 15px;
-	font-family: "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
+	font-family: 'Raleway';
 }
 
 article h2{
@@ -59,7 +59,7 @@ article h2{
 	font-weight: bold;
 	padding-bottom: 15px;
 	padding-top: 20px;
-	font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+	font-family: 'Quicksand', sans-serif;
 }
 
 article hr{
@@ -69,21 +69,20 @@ article hr{
 
 
 article p{
-	line-height: 115%;
 	text-align: justify;
 	letter-spacing: .01rem;
 	font-weight: 400;
 	line-height: 1.2;
-
+	margin: 0 0 20px 0;
 }
 
 article ol{
-	margin-top: 5px;
-	margin-bottom: 10px;
+	margin: 0 0 20px 0;
+	text-align: center;
 }
 
 article ol li{
-	padding-bottom: 5px;
+	margin: 0 0 10px 0;
 
 }
 
@@ -97,7 +96,7 @@ article ol li{
 footer{
 	width: 100%;
 	background-color: #f9f9f9;
-	padding: 20px 0 100px;
+	padding: 20px 0 75px;
 	border-top: 1px solid #f2f2f0;
 	margin: 20px 0 0;
 }
