--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,35 @@
 body{
      font-family: 'Raleway', sans-serif;
      background-color: white;
+     min-width: 800px;
 }
 
 
 
-header img{
+header{
+	background-color: white;
+	background-image:url("../photos/red bunting 3.png");
+	background-size: 100% 100%;
+	position: fixed;
+	top: 0;
+	z-index: 100;
+	width: 100%;
+	height: 400px;
+	min-width: 800px;
+}
+
+.profilepic{
+	max-width: 250px;
 	margin: 0 auto;
-	margin-bottom: -3px;
-	width:100%;
+	display: block;
+	padding-top: 160px;
 }
 
-
-header nav{
-	padding-top: 10px;
-	text-align: center;
-	white;
+main{
+	max-width: 800px;
+	margin: 425px auto 0px;
+	width: 60%;
+	padding-bottom: 20px;
 }
 
 a{
@@ -30,27 +44,12 @@ a{
 	text-decoration: underline;
 }
 
-/** header nav a{
-	color: #ED4D4E;
-	background-color: #dcddcd;
-	padding-bottom: 10px;
-}**/
-
-
-
-main{
-	max-width: 1200px;
-	margin: 0 auto;
-	margin-top: 20px;
-	width: 70%;
-	padding-bottom: 20px;
-}
-
 
 article{
 	color: #333332;
 	padding: 0 15px;
-	font-family: 'Raleway';
+	font-family: 'Raleway'; 
+	line-height: 150%;
 }
 
 article h2{
@@ -62,23 +61,16 @@ article h2{
 	font-family: 'Quicksand', sans-serif;
 }
 
-article hr{
-	width: 25%;
-	margin: 0 auto;	
-}
-
 
 article p{
 	text-align: justify;
 	letter-spacing: .01rem;
 	font-weight: 400;
-	line-height: 1.2;
 	margin: 0 0 20px 0;
 }
 
 article ol{
 	margin: 0 0 20px 0;
-	text-align: center;
 }
 
 article ol li{
@@ -102,8 +94,9 @@ footer{
 }
 
 footer section{
-	width: 70%;
+	width: 60%;
 	margin: 0 auto;
+	max-width: 800px;
 }
 
 
