--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ a{
 	font-size: 14px;
 	letter-spacing: .5px;
 	font-size: 16px;
-	font-family: 'Raleway', sans-serif;
 	color: #333332;
 	text-decoration: underline;
 }
@@ -48,17 +47,14 @@ a{
 article{
 	color: #333332;
 	padding: 0 15px;
-	font-family: 'Raleway'; 
 	line-height: 150%;
 }
 
 article h2{
 	text-align: center;
 	font-size: 32px;
-	font-weight: bold;
-	padding-bottom: 15px;
-	padding-top: 20px;
-	font-family: 'Quicksand', sans-serif;
+	padding: 20px 0 25px 0;
+	font-weight: bold; 
 }
 
 
@@ -81,7 +77,6 @@ article ol li{
 
 .listHead{
 	font-weight:bold;
-	font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
 }
 
 
