--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@ body{
      min-width: 800px;
 }
 
-
-
 header{
 	background-color: white;
 	background-image:url("../photos/blue stripe bunting.png");
@@ -14,40 +12,61 @@ header{
 	top: 0;
 	z-index: 100;
 	width: 100%;
-	height: 400px;
+	height: 300px;
 	min-width: 800px;
 }
 
-.profilepic{
-	max-width: 250px;
-	margin: 0 auto;
+header img{
+	height: 200px;
+	margin: 100px auto;
 	display: block;
-	padding-top: 160px;
+}
+
+#div_1{
+	margin: 300px 0 0 0;
+	padding: 0 0 50px 0;
+}
+
+.mainsection{
+	padding: 50px 0;
+	border-bottom: 1px solid #f2f2f0;
 }
 
 main{
-	max-width: 800px;
-	margin: 425px auto 0px;
-	width: 60%;
+	margin: 350px auto 0px;
 	padding-bottom: 20px;
 }
 
 a{
 	text-decoration: none;
 	display: inline-block;
-	padding: 10px;
-	font-size: 14px;
 	letter-spacing: .5px;
 	font-size: 16px;
 	color: #333332;
 	text-decoration: underline;
 }
 
+.section_divider{
+	width: 50%;
+	float: left;
+}
+
+.section_divider iframe{
+	width: 100%;
+	height: 300px;
+}
+
 
 article{
+	width: 60%;
+	margin: 0 auto;
 	color: #333332;
 	padding: 0 15px;
 	line-height: 160%;
+}
+
+.section_divider article{
+	width: 75%;
 }
 
 article h2{
@@ -57,6 +76,12 @@ article h2{
 	font-weight: bold; 
 }
 
+article h3{
+	text-align: center;
+	font-size: 22px;
+	padding: 10px 0 10px 0;
+	font-weight: bold; 
+}
 
 article p{
 	text-align: justify;
@@ -84,6 +109,7 @@ article ol li{
 
 
 footer{
+	clear: both;
 	width: 100%;
 	background-color: #f9f9f9;
 	padding: 60px 0 0px;
@@ -98,11 +124,7 @@ footer{
 	text-align: center;
  }
 
-.thank_you_article{
-	text-align: center;
+.nv_mainsection
+{
+    opacity:0;
 }
-
-.thank_you_article h2{
-	margin-bottom: 10px;
-}
-
